# Copyright (c) 2020 ARM Limited. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

add_subdirectory(TARGET_LORA_E5 EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_LORA_E5_BREAKOUT EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_LORA_E5_MINI EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_LORA_E5_DEV_BOARD EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_LORA_E5_TINY EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_RAK3172 EXCLUDE_FROM_ALL)
add_subdirectory(TARGET_RAK3172_BREAKOUT EXCLUDE_FROM_ALL)
